codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__coalesces_reads_across_multiple_calls.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
● Explored · 3 calls · completed (ctrl+t)
