codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_error_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
● search.find_docs · failed (ctrl+t)
