codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
● Bash · 1 call · completed
(ctrl+t)
