codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__single_line_command_wraps_with_four_space_continuation.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
● Bash · 1 call ·
completed (ctrl+t)
