codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__stderr_tail_more_than_five_lines_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
● Bash · 1 call · 1 failed (ctrl+t)
